--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: elixir
 elixir:
-  - "1.6.5"
+  - "1.6"
+  - "1.7"
 otp_release:
   - "20.3"
+  - "21.0"
 services:
-  - redis-server
+  - "redis-server"
