--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: elixir
-services: 
-  - "redis-server"
 elixir: 
-  - "1.6"
   - "1.7"
+  - "1.8"
 otp_release: 
   - "20.3"
-  - "21.1"
+  - "21.2"
+script: 
+  - "mix coveralls.travis"
+services: 
+  - "redis-server"
