--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,18 @@ env:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    name: test
     strategy:
       matrix:
         elixir: ['1.10.x', '1.11.x']
         erlang: ['22.x', '23.x']
         os: [ubuntu-latest]
-    name: test
+    runs-on: ${{ matrix.os }}
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/setup-elixir@v1
         with:
